Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Local roles blocking when the userfolder supports it (currently
  basic UserFolderWithGroups only). The UI only deals with simple
  on/off blocking of acquisition for now (using role '-' for
  group:role:Anonymous).
Bug fixes:
~~~~~~~~~~
- Use a custom guard for boxes. DCWorkflow's one couldn't be used. This guard is
  still compatible, it just has a specific name space.
- ballon displaying portal type and id on document icon is not l10n
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- css improve default fonts family for Mac and *nix