@@ -7,6 +7,7 @@ New features:
   basic UserFolderWithGroups only). The UI only deals with simple
   on/off blocking of acquisition for now (using role '-' for
   group:role:Anonymous).
+- Adding a search by subject in the advanced search form
 Bug fixes:
 ~~~~~~~~~~
 - Use a custom guard for boxes. DCWorkflow's one couldn't be used. This guard is
